--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli|Pacifico&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
 <div class="linha-verde"></div>
 <header>
-    <h1></h1>
+   <div class="tudo-menos-amao"> <h1>Notify©</h1>
+    <h2>Um novo jeito de ver as coisas</h2>
+<div class="icones-header">
+    <div> <img src="./imagens/icone-android.png" alt="icone android"> </div>
+    <div><img src="./imagens/icone-ios.png" alt="icone do ios"></div>
+    <div><img src="./imagens/icone-windows.png" alt="icone do windows"></div>
+</div>
+</div>
+<div><img src="./imagens/hand.png" alt="uma mão segurando celular"></div>
 </header>
 <body>
     
